# NyxNet

./: .release.toml  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TODO.md  build.rs  deps.txt  mkdocs.yml  nyx.toml  remove_c_deps.ps1  t -p nyx-fec --lib  task.md  test_crypto_properties.ps1
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: chaos-mesh.yml  ci.yml  (+9 more)
build-protoc/: Cargo.toml  build.rs
docs/: PEER_AUTHENTICATION_GUIDE.md  comprehensive_documentation.md  comprehensive_documentation_en.md  index.md  task_10_3_integration_guide.md  tutorial_chat.md
formal/: .github_workflows_verification.yml  README.md  basic.cfg  capability_stress.cfg  comprehensive.cfg  counterexample_analyzer.py  enhanced_comprehensive.cfg  generate-verification-report.py  liveness_focus.cfg  minimal_test.cfg  nyx_multipath_plugin.cfg  nyx_multipath_plugin.tla  optimize_model_checking.py  run_model_checking.py  scalability.cfg  stress_testing.cfg  test_configurations.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cmix_batch.rs  noise_handshake.rs  pathbuilder_advanced.rs  plugin_parser.rs  stream_parser_advanced.rs  vdf_proof.rs  vdf_proof_comprehensive.rs
nyx-cli/: Cargo.toml  build.rs
nyx-cli/i18n/: en.ftl  ja.ftl  zh.ftl
nyx-cli/src/: benchmark.rs  connection_monitor.rs  error_tracker.rs  i18n.rs  latency_collector.rs  main.rs  nyx.api.rs  performance_analyzer.rs  prometheus_client.rs  statistics_renderer.rs  throughput_measurer.rs
nyx-cli/tests/: integration_tests.rs  performance_tests.rs
nyx-conformance/: Cargo.toml
nyx-conformance/src/: lib.rs  network_simulator.rs  property_tester.rs
nyx-conformance/tests/: adaptive_cover.rs  aead_comprehensive.rs  capability.rs  capability_extended.rs  capability_negotiation_properties.proptest-regressions  capability_negotiation_properties.rs  close.rs  close_error.rs  cmix.rs  cmix_negative.rs  cmix_vdf.rs  component_integration.rs  congestion.rs  core.rs  cover_lambda.rs  cover_lambda5.rs  cryptographic_operation_properties.proptest-regressions  cryptographic_operation_properties.rs  e2e_full.rs  e2e_scenarios.rs  e2e_scenarios_simple.rs  fec.rs  fec_parity.rs  fec_reconstruct.rs  fec_shuffle.rs  frame.rs  frame_reserved.rs  handshake.rs  header_error.rs  header_invalid.rs  hole_punch.rs  hole_punch_success.rs  ice.rs  ice_handshake.rs  ice_txid_fail.rs  integration_basic.rs  kdf.rs  kyber.rs  load_testing_performance.rs  localized.rs  (+46 more)
nyx-control/: Cargo.toml  build.rs
nyx-control/src/: lib.rs  probe.rs  push.rs  rendezvous.rs  settings.rs  settings_sync.rs
nyx-control/tests/: dht.rs  settings.rs
nyx-core/: Cargo.toml  build.rs
nyx-core/src/: capability.rs  compliance.rs  config.rs  error.rs  i18n.rs  lib.rs  mobile.rs  openbsd.rs  push.rs  sandbox.rs  types.rs
nyx-crypto/: Cargo.toml
nyx-crypto/benches/: constant_time.rs
nyx-crypto/src/: aead.rs  hpke.rs  hybrid.rs  kdf.rs  keystore.rs  lib.rs  noise.rs
nyx-crypto/tests/: kyber.rs  noise.rs  rekey.rs  x25519.rs
nyx-daemon/: Cargo.toml  build.rs  libpure_rust_dht.rlib
nyx-daemon/proto/: control.proto
nyx-daemon/src/: alert_system.rs  alert_system_enhanced.rs  alert_system_test.rs  config_manager.rs  event_system.rs  health_monitor.rs  layer_manager.rs  layer_recovery_test.rs  libp2p_network.rs  main.rs  metrics.rs  path_builder.rs  path_builder_broken.rs  path_builder_simple.rs  path_performance_test.rs  prometheus_exporter.rs  pure_rust_dht_tcp.rs  pure_rust_p2p.rs  session_manager.rs  stream_manager.rs
nyx-daemon/src/path_builder/: integration_tests.rs  tests.rs
nyx-daemon/src/prometheus_exporter/: README.md
nyx-fec/: Cargo.toml
nyx-fec/benches/: fec_simd.rs
nyx-fec/src/: lib.rs  padding.rs  raptorq.rs  timing.rs
nyx-mix/: Cargo.toml
nyx-mix/src/: accumulator.rs  adaptive.rs  anonymity.rs  cmix.rs  cover.rs  cover_adaptive.rs  larmix.rs  lib.rs  vdf.rs  vdf_calib.rs
nyx-mobile-ffi/: Cargo.toml  README.md  build.rs
nyx-mobile-ffi/android/: NyxMobileBridge.java  NyxMobileJNI.java
nyx-mobile-ffi/ios/: NyxMobile.h  NyxMobile.m
nyx-mobile-ffi/src/: android.rs  common.rs  ios.rs  lib.rs
nyx-sdk/: Cargo.toml
nyx-sdk-wasm/: Cargo.toml  nyx_sw.js
nyx-sdk-wasm/src/: lib.rs
nyx-sdk/src/: config.rs  daemon.rs  error.rs  events.rs  lib.rs  proto.rs  reconnect.rs  retry.rs  stream.rs
nyx-sdk/tests/: integration_test.rs  integration_tests.rs
nyx-stream/: Cargo.toml  RESOURCE_CLEANUP.md
nyx-stream/benches/: performance_test.rs  realistic_performance_test.rs  simple_performance_test.rs
nyx-stream/examples/: detailed_performance_analysis.rs
nyx-stream/src/: ack.rs  async_stream.rs  builder.rs  cap_negotiator.rs  capability.rs  congestion.rs  error_handler.rs  errors.rs  flow_controller.rs  frame.rs  frame_handler.rs  hpke_rekey.rs  integrated_frame_processor.rs  layer.rs  lib.rs  localized.rs  management.rs  mpr.rs  plugin.rs  plugin_dispatch.rs  plugin_geostat.rs  plugin_ipc.rs  plugin_registry.rs  plugin_sandbox.rs  plugin_sandbox_macos.rs  plugin_sandbox_windows.rs  receiver.rs  reorder.rs  resource_manager.rs  scheduler.rs  sequencer.rs  settings.rs  simple_frame_handler.rs  state.rs  stream_frame.rs  tx.rs
nyx-stream/src/tests/: flow_controller_tests.rs  frame_handler_tests.rs  integrated_frame_processor_tests.rs  mod.rs
nyx-stream/tests/: builder.rs  congestion.rs  frame.rs  load_balancing.rs  obfuscator.rs  resource_cleanup_integration.rs  stream.rs
nyx-telemetry/: Cargo.toml
nyx-telemetry/src/: lib.rs
nyx-telemetry/tests/: exporter.rs  metrics_404.rs
nyx-transport/: Cargo.toml
nyx-transport/benches/: send_mmsg.rs
nyx-transport/src/: ice.rs  lib.rs  path_validation.rs  quic.rs  stun_server.rs  tcp_fallback.rs  teredo.rs
nyx-transport/tests/: ice.rs  stun_server.rs  teredo.rs
scripts/: README.md  build-verify.ps1  build-verify.sh  cargo-verify  generate-verification-report.py  release_notes.sh  verify.py
spec/: Nyx_Design_Document.md  Nyx_Design_Document_EN.md  Nyx_Protocol_v0.1_Spec.md  Nyx_Protocol_v0.1_Spec_EN.md  Nyx_Protocol_v1.0_Spec.md  Nyx_Protocol_v1.0_Spec_EN.md
src/: empty.rs
(+34 files in other folders)
