[workspace]
members = [
    "nyx-core",
    "nyx-crypto",
    "nyx-transport",
    "nyx-mix",
    "nyx-fec",
    "nyx-stream",
    "nyx-telemetry", # Prometheus exporter crate
    # "nyx-control",  # Temporarily excluded until protoc is bundled
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z" 
