[package]
name = "nyx-workspace"
version = "0.0.0"
edition = "2021"
publish = false
build = "build.rs"

[workspace]
members = [
    "nyx-core",
    "nyx-crypto",
    "nyx-transport",
    "nyx-mix",
    "nyx-fec",
    "nyx-stream",
    "nyx-telemetry", # Prometheus exporter crate
    "nyx-control",
    "nyx-cli",
    "nyx-sdk-wasm",
    "nyx-conformance",
    "build-protoc",
]
resolver = "2"

[build-dependencies]
protoc-bin-vendored = "3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z" 
