[workspace]
members = [
    "nyx-core",
    "nyx-crypto",
    "nyx-transport",
    "nyx-mix",
    "nyx-fec",
    "nyx-stream",
    "nyx-telemetry", # Prometheus exporter crate
    "nyx-control",
    "nyx-cli",
    "nyx-daemon",
    "nyx-sdk-wasm",
    "nyx-conformance",
    "build-protoc",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z" 
