[package]
name = "nyx-cli"
version = "0.1.0"
edition = "2021"

description = "Nyx command line interface utilities"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
crossterm = "0.28"
comfy-table = "7.1"
console = "0.15"
indicatif = "0.17"
byte-unit = "5.1"
colored = "2.2"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
fluent-bundle = "0.16"
rust-embed = "8.7"
nyx-crypto = { path = "../nyx-crypto" }
serde_yaml = "0.9"
fluent = "0.17"
serde_json = "1.0"
unic-langid = "0.9"
ctrlc = "3.4"
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10" 