[package]
name = "nyx-cli"
version = "0.1.0"
edition = "2021"

description = "Nyx command line interface utilities"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
crossterm = "0.28"
comfy-table = "7.1"
console = "0.15"
indicatif = "0.17"
byte-unit = "5.1"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.10" 