[package]
name = "nyx-cli"
version = "0.1.0"
edition = "2021"

description = "Nyx command line interface utilities"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
crossterm = "0.28"
comfy-table = "7.1"
console = "0.15"
indicatif = "0.17"
byte-unit = "5.1"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
fastrand = "2.0"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
regex = "1.10"

[build-dependencies]
tonic-build = "0.10" 