[package]
name = "nyx-conformance"
version = "0.1.0"
edition = "2021"

description = "Nyx protocol conformance test suite"
license = "MIT OR Apache-2.0"
authors = ["SeleniaProject"]

[dependencies]
nyx-crypto = { path = "../nyx-crypto" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
nyx-core = { path = "../nyx-core" }
nyx-control = { path = "../nyx-control" }
nyx-stream = { path = "../nyx-stream" }
nyx-fec = { path = "../nyx-fec" }
nyx-transport = { path = "../nyx-transport", default-features = false }
nyx-mix = { path = "../nyx-mix" }

[dev-dependencies]
once_cell = "1.19"
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
num-bigint = "0.4"
prometheus = "0.13"
proptest = "1.4"
rand = "0.8"

[features]
pq = [] 