[package]
name = "nyx-conformance"
version = "0.1.0"
edition = "2021"

description = "Nyx protocol conformance test suite"
license = "MIT OR Apache-2.0"
authors = ["SeleniaProject"]

[dependencies]
nyx-crypto = { path = "../nyx-crypto" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
nyx-core = { path = "../nyx-core" }
nyx-control = { path = "../nyx-control" }
nyx-stream = { path = "../nyx-stream" }
nyx-fec = { path = "../nyx-fec" }
nyx-transport = { path = "../nyx-transport", default-features = false }
nyx-mix = { path = "../nyx-mix" }
rand_distr = "0.4"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
rand = "0.8"

[dev-dependencies]
once_cell = "1.19"
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
num-bigint = "0.4"
prometheus = "0.14"
proptest = "1.4"
rand = "0.8"
rand_distr = "0.4"
tokio-test = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
pq = ["nyx-crypto/kyber"]
hpke = ["nyx-crypto/hpke"]
classic = ["nyx-crypto/classic"]
hybrid = ["classic", "pq", "nyx-crypto/hybrid"] 