[package]
name = "nyx-core"
version = "0.1.0"
edition = "2021"

description = "Nyx Core utilities, types, configuration, and error handling."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.37", features = ["full"] }
notify = { version = "6.1" }

[target.'cfg(target_os = "linux")'.dependencies]
seccomp = "0.3"
anyhow = "1"

[dev-dependencies]
hex-literal = "0.4"

[build-dependencies]
protoc-bin-vendored = "3"
