[package]
name = "nyx-core"
version = "0.1.0"
edition = "2021"

description = "Nyx Core utilities, types, configuration, and error handling."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["sync","time", "macros"] }
notify = { version = "6.1" }
fluent-bundle = { version = "0.15" }
unic-langid = "0.9"
once_cell = "1.19"
serde_cbor = "0.11"
tokio-stream = { version = "0.1", features=["sync"] }

# Optional telemetry integration
nyx-telemetry = { path = "../nyx-telemetry", optional = true }

[features]
default = []
# Enable automatic error metric recording.
telemetry = ["nyx-telemetry"]

[target.'cfg(target_os = "linux")'.dependencies]
seccomp = "0.1"
anyhow = "1"

[dev-dependencies]
hex-literal = "0.4"

[build-dependencies]
protoc-bin-vendored = "3"
