[package]
name = "nyx-core"
version = "0.1.0"
edition = "2021"

description = "Nyx Core utilities, types, configuration, and error handling."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["sync","time", "macros"] }
notify = { version = "6.1" }
fluent-bundle = { version = "0.15" }
unic-langid = "0.9"
once_cell = "1.19"
serde_cbor = "0.11"
tokio-stream = { version = "0.1", features=["sync"] }
async-trait = "0.1"
anyhow = "1"
libc = "0.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = { version = "0.8", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional telemetry integration
nyx-telemetry = { path = "../nyx-telemetry", optional = true }

# Optional crypto integration
nyx-crypto = { path = "../nyx-crypto", optional = true }

# Optional push notification dependencies
fcm = { version = "0.9", optional = true }
a2 = { version = "0.10", optional = true }

[features]
default = []
# Enable automatic error metric recording.
telemetry = ["nyx-telemetry"]
# Enable mobile platform integration
mobile = ["nyx-crypto"]
# Enable push notification support
push = ["dep:fcm", "dep:a2"]
# Enable FCM support
fcm = ["dep:fcm"]
# Enable APNS support  
apns = ["dep:a2"]

[target.'cfg(target_os = "linux")'.dependencies]
seccomp = "0.1"
anyhow = "1"

[dev-dependencies]
hex-literal = "0.4"
tempfile = "3.8"

[build-dependencies]
protoc-bin-vendored = "3"
