[package]
name = "nyx-daemon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
async-trait = "0.1"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tonic = { version = "0.10", default-features = false, features = ["transport", "prost", "codegen"] }
tokio-stream = { version = "0.1", features = ["net"] }
clap = { version = "4.0", features = ["derive"] }

# Core Nyx components
nyx-core = { path = "../nyx-core" }
nyx-transport = { path = "../nyx-transport" }
nyx-stream = { path = "../nyx-stream" }
nyx-mix = { path = "../nyx-mix" }
nyx-control = { path = "../nyx-control" }
nyx-telemetry = { path = "../nyx-telemetry" }
nyx-crypto = { path = "../nyx-crypto" }
nyx-fec = { path = "../nyx-fec" }

# Additional dependencies for comprehensive implementation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"

# System monitoring
sysinfo = "0.30"

# Configuration and serialization
toml = "0.8"
config = "0.14"

# DHT and P2P networking (Disabled to avoid C++ dependencies)
# libp2p = { version = "0.53", features = ["kad", "mdns", "yamux", "tcp", "dns", "tokio", "macros"] }
# libp2p-identity = "0.2"
# libp2p-kad = "0.45"
# libp2p-swarm = "0.44"

# Pure Rust cryptography to replace libp2p-noise
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
multiaddr = "0.18"

# Networking and async utilities
socket2 = "0.5"

# Logging
log = "0.4"

# Metrics and telemetry
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
opentelemetry-semantic-conventions = "0.13"

# HTTP server for Prometheus metrics
axum = { version = "0.7", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "tokio"] }

# Crypto and security
rand = "0.8"
blake3 = "1.5"
hex = "0.4"

# Pure Rust TLS for tonic (avoiding ring dependency) - DISABLED to avoid C++ deps
# rustls = { version = "0.21", default-features = false, features = ["logging", "std", "tls12"] }
# rustls-pemfile = "1.0"
# tonic-rustls = "0.2"

# Pure Rust crypto backend for rustls (no ring/aws-lc-rs) - DISABLED
# webpki-roots = "0.25"

# Data structures and algorithms
indexmap = "2.1"
lru = "0.12"
priority-queue = "1.3"

# Path and routing
petgraph = "0.6"
geo = "0.27"

# DNS resolver (Pure Rust)
hickory-resolver = "0.24"

# Database for peer persistence (Pure Rust alternative)
redb = { version = "2.1", features = ["logging"] }

[build-dependencies]
tonic-build = "0.10" 