[package]
name = "nyx-fec"
version = "0.1.0"
edition = "2021"

description = "Nyx Reed-Solomon FEC wrapper for 1280B fixed packets"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["simd"]

[dependencies]
reed-solomon-erasure = "6"
nyx-core = { path = "../nyx-core" }
tokio = { version = "1.37", features = ["time", "sync", "rt"] }
rand = "0.8"
rand_distr = "0.4"
raptorq = "0.3"

[features]
# Enable C/assembly SIMD acceleration in reed-solomon-erasure when available.
simd = ["reed-solomon-erasure/simd-accel"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
