[package]
name = "nyx-fec"
version = "0.1.0"
edition = "2021"

description = "Nyx Reed-Solomon FEC wrapper for 1280B fixed packets"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["simd"]

[dependencies]
reed-solomon-erasure = "6"
nyx-core = { path = "../nyx-core" }
tokio = { version = "1.37", features = ["time", "sync", "rt"] }
rand = "0.8"
rand_distr = "0.5"
raptorq = "=1.6.0"
rayon = { version = "1.10", optional = true }

[target.'cfg(windows)'.dependencies]
rayon = { version = "1.10" }

[features]
default = []
# Enable SIMD-accelerated C backend of reed-solomon-erasure (requires cc).
simd = ["reed-solomon-erasure/simd-accel"]
raptorq = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
