[package]
name = "nyx-mix"
version = "0.1.0"
edition = "2021"

description = "Nyx mix routing layer (path selection & cover traffic)"
license = "MIT OR Apache-2.0"

[features]
default = []
mobile = []

[dependencies]
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
nyx-core = { path = "../nyx-core" }
sha2 = "0.10"
rayon = "1.9"
serde = { version = "1", features=["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
bitflags = "2.4"
schemars = { version = "0.8", features=["derive"] }
jsonschema = "0.17"
tracing = "0.1"
num-bigint = { version = "0.4", features=["rand"] }
num-integer = "0.1"
num-traits = "0.2"
tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
lazy_static = "1"
tokio-stream = { version = "0.1", features=["sync"] }
