[package]
name = "nyx-mobile-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Nyx Team"]
description = "Mobile platform FFI bindings for iOS and Android"
license = "MIT"

[lib]
name = "nyx_mobile_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
once_cell = "1.19"

# iOS-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"
core-foundation-sys = "0.8"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[features]
default = []
ios = []
android = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
