[package]
name = "nyx-sdk-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM bindings for Nyx client operations"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
nyx-crypto = { path = "../nyx-crypto" }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4" 