[package]
name = "nyx-stream"
version = "0.1.0"
edition = "2021"

description = "Nyx secure stream layer: frame parser & flow control"
license = "MIT OR Apache-2.0"

[dependencies]
nom = { version = "7", default-features = false, features = ["std"] }
nyx-core = { path = "../nyx-core" }
nyx-fec = { path = "../nyx-fec" }
tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
serde = { version = "1", features=["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
bitflags = "2.4"
schemars = { version = "0.8", features=["derive"] }
jsonschema = "0.17"
tracing = "0.1"
bytes = "1"
once_cell = "1.19"
nyx-crypto = { path = "../nyx-crypto" }
nyx-telemetry = { path = "../nyx-telemetry" }
semver = { version = "1.0", features = ["serde"] }
libloading = { version = "0.8", optional = true }
nix = { version = "0.27", optional = true, default-features = false, features = ["sched", "hostname", "fs"] }
caps = { version = "0.5.5", optional = true }

[features]
default = []
plugin = []
mpr_experimental = []
dynamic_plugin = ["libloading", "nix", "caps"]
hpke = ["nyx-crypto/hpke"]
