[package]
name = "nyx-stream"
version = "0.1.0"
edition = "2021"

description = "Nyx secure stream layer: frame parser & flow control"
license = "MIT OR Apache-2.0"

[dependencies]
nom = { version = "7", default-features = false, features = ["std"] }
nyx-core = { path = "../nyx-core" }
nyx-fec = { path = "../nyx-fec" }
tokio = { version = "1.37", features = ["sync", "time", "rt", "macros", "io-util"] }
tokio-util = { version = "0.7" }
serde = { version = "1", features=["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
bitflags = "2.4"
schemars = { version = "0.8", features=["derive"] }
jsonschema = "0.32"
tracing = "0.1"
bytes = "1"
once_cell = "1.19"
nyx-crypto = { path = "../nyx-crypto" }
nyx-telemetry = { path = "../nyx-telemetry" }
semver = { version = "1.0", features = ["serde"] }
libloading = { version = "0.8", optional = true }
thiserror = "1.0"
fastrand = "2.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", optional = true, default-features = false, features = ["sched", "hostname", "fs"] }
caps = { version = "0.5.5", optional = true }
extrasafe = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation","Win32_System_Threading","Win32_System_JobObjects", "Win32_Security"] }
win32job = "2.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "performance_test"
harness = false

[[bench]]
name = "simple_performance_test"
harness = false

[features]
default = []
plugin = []
mpr_experimental = []
dynamic_plugin = ["libloading", "nix", "caps", "extrasafe"]
hpke = ["nyx-crypto/hpke"]
