[package]
name = "nyx-telemetry"
version = "0.1.0"
edition = "2021"

description = "Prometheus metrics exporter for Nyx."
license = "MIT OR Apache-2.0"

[dependencies]
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
once_cell = "1.19" 