[package]
name = "nyx-telemetry"
version = "0.1.0"
edition = "2021"

description = "Prometheus metrics exporter for Nyx."
license = "MIT OR Apache-2.0"

[dependencies]
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
once_cell = "1.19"
tracing-subscriber = "0.3"
tracing-bunyan-formatter = "0.3"
opentelemetry = { version = "0.21", default-features = false }
opentelemetry_sdk = { version = "0.21", features=["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", default-features = false, features=["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.22" 
pprof = { version = "0.11", features = ["flamegraph"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }

[features]
flamegraph = ["pprof", "chrono"] 

[package.metadata.docs.rs]
features = ["flamegraph"] 