[package]
name = "nyx-telemetry"
version = "0.1.0"
edition = "2021"

description = "Comprehensive telemetry with OpenTelemetry OTLP and Prometheus support for Nyx."
license = "MIT OR Apache-2.0"

[dependencies]
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
once_cell = "1.19"
tracing-subscriber = "0.3"
tracing-bunyan-formatter = "0.3"
opentelemetry = { version = "0.21", default-features = false, features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.14", default-features = false, features = ["grpc-tonic", "trace", "metrics"], optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22" 
pprof = { version = "0.11", features = ["flamegraph"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0", features = ["derive"] }
warp = { version = "0.3", optional = true }
tonic = { version = "0.10", optional = true }
anyhow = "1.0"

[features]
default = ["otlp", "prometheus"]
flamegraph = ["pprof", "chrono"] 
otlp = ["dep:opentelemetry-otlp", "dep:tonic"]
prometheus = ["dep:opentelemetry-prometheus", "dep:warp"]

[package.metadata.docs.rs]
features = ["flamegraph", "otlp", "prometheus"] 

[dev-dependencies]
hyper = { version = "0.14", features = ["client", "tcp"] }
reqwest = { version = "0.11", default-features = false, features=["json","stream","rustls-tls"] } 
tempfile = "3.8" 