[package]
name = "nyx-transport"
version = "0.1.0"
edition = "2021"

description = "Nyx UDP transport adapter with NAT traversal utilities."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
rand = "0.8"
socket2 = "0.5"
tracing = "0.1"
async-trait = "0.1"
nyx-core = { path = "../nyx-core" }
nyx-mix = { path = "../nyx-mix" }
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio", "udp"] }
rcgen = "0.13"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27" }
